syntax = "proto3";

option go_package = "./../../../adapter/protobuffer";

service Payment {
    rpc Execute(TransactionRequest) returns (TransactionResponse) {}
}

message TransactionRequest {
    string account = 1;         // UUID of the account
    string transaction = 2;     // UUID of the transaction 
    string mcc = 3;             // Merchant Category Code
    string merchant = 4;        // Merchant name
    string total_amount = 5;    // Total transaction amount
}

message TransactionResponse {
    string code = 1;            // Response code (e.g., "00" for success)
}